2006-04-13 Sandro Santilli <strk@refractions.net>

	* geos::simplify::TopologyPreservingSimplifier class
	* geos::simplify::TaggedLinesSimplifier class
	* source/geom/GeometryComponentFilter.cpp: filter_ro
	  re-enabled.

2006-04-12 Sandro Santilli <strk@refractions.net>

	* headers/geos/simplify/Makefile.am: only install
	  DouglasPeuckerSimplifier.h header
	* geos::geom::LineSegment class made polymorphic to
	  allow derivation of TaggedLineSegment
	* geos::simplify::TaggedLineStringSimplifier class
	* geos::simplify:LineSegmentIndex class
	* geos::simplify:TaggedLineSegment class
	* geos::simplify:TaggedLineString class
	* geos::io::WKBReader: added default constructor
	  using default GeometryFactory, fixed exception
	  constructors.

2006-04-11 Sandro Santilli <strk@refractions.net>

	* geos::simplify::DouglasPeukerSimplifier class
	* geos::geom::util::GeometryTransformer class
	* source/headers/geos/geom/CoordinateSequence.h:
	  added AutoPtr typdef
	* source/headers/geos/geom/: LineString.h, LinearRing.h,
	  source/geom/: LineString.cpp, LinearRing.cpp:
	  added constructors by auto_ptr
	* source/headers/geos/geom/GeometryFactory.h,
	  source/geom/GeometryFactory.cpp:
	  added LineString and LinearRing constructors by auto_ptr

2006-04-10 Sandro Santilli <strk@refractions.net>

	* tools/geos-config.in: Removed INLINE flags from geos-config
	  --libs
	* source/: headers/geos/geom/GeometryFactory.h,
	  geom/GeometryFactory.cpp: Added defaultInstance() method
	* source/geom/Geometry.cpp: made INTERNAL_GEOMETRY_FACTORY 
	  initialized using GeometryFactory::defaultInstance(),
	  fixed missing rounring in getCentroid(Coordinate&) function.
	* source/io/Unload.cpp: removed last deletion in Release.
	  The class is now useless.
	* source/inlines.cpp: inlines functions provider for
	  GEOS_INLINE builds. Fixed libtool problems on OSX,MingW,Cygwin.
	* source/geom/LineString.cpp, source/geom/Point.cpp:
	  changed CoordinateSequence member to be an auto_ptr<>